--- a/frontend.yaml
+++ b/frontend.yaml
@@ -33,15 +33,8 @@ Resources:
             Version: "2012-10-17"
             Statement:
               - Effect: Allow
-                Action: 
-                  - "s3:ListBucket"
-                  - "s3:GetObject"
-                  - "s3:PutObject"
-                Resource: 
-                  - "arn:aws:s3:::input1-sreeni1"
-                  - "arn:aws:s3:::input1-sreeni1/*"
-                  - "arn:aws:s3:::output1-sreeni1"
-                  - "arn:aws:s3:::output1-sreeni1/*"
+                Action: "s3:*"
+                Resource: "*"
               - Effect: Allow
                 Action: "logs:*"
                 Resource: "*"
@@ -52,7 +45,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - "apigateway:GET"
-                  - "apigateway:POST"
+                  - "apigateway:POST" # Add if you need to create or modify API resources
                   - "apigateway:PUT"
                 Resource:
                   - "*"
@@ -82,7 +75,7 @@ Resources:
           sudo mkdir my_project
           cd my_project
           sudo git clone https://github.com/SreenivasPrasad2025/CloudArchTermAssignment
-          cd CloudArchTermAssignment/Flask_CA
+          cd CloudArchTermAssignment/Flask_CA # Update this path if your repo structure is different
           sudo python3 -m venv venv
           source venv/bin/activate
           sudo pip install -r requirements.txt
