--- a/frontend.yaml
+++ b/frontend.yaml
@@ -45,7 +45,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - "apigateway:GET"
-                  - "apigateway:POST" # Add if you need to create or modify API resources
+                  - "apigateway:POST" 
                   - "apigateway:PUT"
                 Resource:
                   - "*"
