--- a/backend.yaml
+++ b/backend.yaml
@@ -1,7 +1,99 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: CloudFormation stack for Lambda function, S3 (Input and Output Buckets), API Gateway, and other services.
+Description: CloudFormation stack for Lambda function, S3 (Input and Output Buckets), API Gateway, and other services, including network security with Security Groups and Network ACLs.
 
 Resources:
+  # VPC to host resources
+  MyVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: MyVPC
+
+  # Subnet within the VPC
+  MySubnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref MyVPC
+      CidrBlock: 10.0.1.0/24
+      AvailabilityZone: !Select 
+        - 0
+        - !GetAZs 
+          Ref: AWS::Region
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: MySubnet
+
+  # Security Group for EC2 Instances
+  MySecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow SSH and HTTP access
+      VpcId: !Ref MyVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          FromPort: -1
+          ToPort: -1
+          CidrIp: 0.0.0.0/0
+
+  # Network ACL for additional security
+  MyNetworkACL:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId: !Ref MyVPC
+      Tags:
+        - Key: Name
+          Value: MyNetworkACL
+
+  # Inbound rule for the Network ACL
+  MyNetworkAclInboundRule:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref MyNetworkACL
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      Egress: false
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 80
+        To: 80
+
+  # Outbound rule for the Network ACL
+  MyNetworkAclOutboundRule:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref MyNetworkACL
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      Egress: true
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 80
+        To: 80
+
+  # Association of the subnet with the Network ACL
+  SubnetNetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref MySubnet
+      NetworkAclId: !Ref MyNetworkACL
+
+  # S3 Buckets with Encryption
   InputBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -20,6 +112,7 @@ Resources:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
 
+  # IAM Role for Lambda with Least Privilege
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -57,6 +150,7 @@ Resources:
                   - transcribe:GetTranscriptionJob
                 Resource: "*"
 
+  # Lambda Function
   LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -110,6 +204,7 @@ Resources:
       Runtime: python3.8
       Timeout: 300
 
+  # API Gateway
   ApiGatewayRestApi:
     Type: AWS::ApiGateway::RestApi
     Properties:
@@ -183,6 +278,7 @@ Resources:
             LoggingLevel: INFO
             MetricsEnabled: true
 
+  # Permission for API Gateway to Invoke Lambda
   LambdaPermissionForApiGateway:
     Type: AWS::Lambda::Permission
     Properties:
